Trying to make faster

--- a/resources/configfile.ini
+++ b/resources/configfile.ini
@@ -1,11 +1,11 @@
-port=8080
+port=8084
 minThreads=1
 maxThreads=10
 cleanupInterval=1000
 readTimeout=60000
 maxRequestSize=52428800
 maxMultiPartSize=52428800
-fileName=logs/face-parts.log
+fileName=face-parts.log
 maxSize=1000000
 maxBackups=2
 minLevel=0
@@ -13,4 +13,4 @@ msgformat={timestamp} {typeNr} {type} thread={thread}: {msg}
 timestampFormat=dd.MM.yyyy hh:mm:ss.zzz
 bufferSize=0
 face_model=resources/face_p146.xml
-pose_model=resourcess/pose_BUFFY.xml
+pose_model=resources/pose_BUFFY.xml
