Adding an ECV endpoint

--- a/resources/configfile.ini
+++ b/resources/configfile.ini
@@ -14,3 +14,4 @@ timestampFormat=dd.MM.yyyy hh:mm:ss.zzz
 bufferSize=0
 face_model=resources/face_p146.xml
 pose_model=resources/pose_BUFFY.xml
+ecv_file=ecv.txt
