Now have the ability to return a jpeg with the information drawn on it

--- a/src/main/resources/configfile.ini
+++ b/src/main/resources/configfile.ini
@@ -1,3 +1,4 @@
+# HTTP properties
 port=8084
 minThreads=1
 maxThreads=10
@@ -5,6 +6,8 @@ cleanupInterval=1000
 readTimeout=60000
 maxRequestSize=52428800
 maxMultiPartSize=52428800
+
+# Logger options
 fileName=face-parts.log
 maxSize=1000000
 maxBackups=2
@@ -12,6 +15,17 @@ minLevel=0
 msgformat={timestamp} {typeNr} {type} thread={thread}: {msg}
 timestampFormat=dd.MM.yyyy hh:mm:ss.zzz
 bufferSize=0
+
+# Model file locations
 face_model=src/main/resources/face_p146.xml
 pose_model=src/main/resources/pose_BUFFY.xml
+
+# File to determine if server is up or down
 ecv_file=ecv.txt
+
+# Properties that define how images are displayed
+faceColor=255,0,0
+foregroundTextColor=0,0,0
+pointColor=0,255,0
+poseTextSize=20
+numberTextSize=15
