Addressing code reviews

--- a/src/main/resources/configfile.ini
+++ b/src/main/resources/configfile.ini
@@ -17,11 +17,13 @@ timestampFormat=dd.MM.yyyy hh:mm:ss.zzz
 bufferSize=0
 
 # Model file locations
-face_model=src/main/resources/face_p146.xml
-pose_model=src/main/resources/pose_BUFFY.xml
+faceModel=src/main/resources/face_p146.xml
+poseModel=src/main/resources/pose_BUFFY.xml
+frontalPoints=68
+profilePoints=39
 
 # File to determine if server is up or down
-ecv_file=ecv.txt
+ecvFile=ecv.txt
 
 # Properties that define how images are displayed
 faceColor=255,0,0
@@ -29,3 +31,9 @@ foregroundTextColor=0,0,0
 pointColor=0,255,0
 poseTextSize=20
 numberTextSize=15
+
+# Good response image versions
+imageResponses=jpg,jpeg
+
+# Uploads are done using multipart-form.  This sets the part name of the uploaded image
+uploadedFileName=file
