--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
 language: java
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install libatlas-dev
+  - sudo apt-get install libjpeg-dev
+  - sudo apt-get install libtbb-dev
+  - sudo apt-get install qt5-default
+  - sudo apt-get install liblas-c-dev
+  - sudo apt-get install maven
