--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
   - sudo apt-get install libatlas-dev
   - sudo apt-get install libjpeg-dev
   - sudo apt-get install libtbb-dev
+  - sudo apt-get install liblas-c-dev
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
   - sudo apt-get install -qq qt5-default
