--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: java
 before_install:
   - sudo apt-get update
-  - sudo apt-get install libatlas-dev
-  - sudo apt-get install libjpeg-dev
-  - sudo apt-get install libtbb-dev
+  - sudo apt-get install libgdal-dev
   - sudo apt-get install libgdal1-dev
   - sudo apt-get install liblas-dev
   - sudo apt-get install liblas-c2
   - sudo apt-get install liblas-c-dev
+  - sudo apt-get install libatlas-dev
+  - sudo apt-get install libjpeg-dev
+  - sudo apt-get install libtbb-dev
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
   - sudo apt-get install -qq qt5-default
