--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,4 @@ before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
   - sudo apt-get install -qq qt5-default
+  - sudo dpkg -L liblas-c-dev
