--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.eharmony.modeling</groupId>
     <artifactId>face-parts-service</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>Face Parts Service</name>
     <description>HTTP service for segmenting faces and getting fiducial markers</description>
 
@@ -55,7 +53,7 @@
                         <phase>compile</phase>
                         <configuration>
                             <target>
-                                <exec executable="make" dir="target/classes" failonerror="true"/>
+                                <exec executable="make" dir="target/classes" failonerror="true" />
                             </target>
                         </configuration>
                         <goals>
