--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.eharmony.modeling</groupId>
     <artifactId>face-parts-service</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>Face Parts Service</name>
     <description>HTTP service for segmenting faces and getting fiducial markers</description>
 
